--- a/style.css
+++ b/style.css
@@ -135,9 +135,9 @@ body {
 }
 .lead {
     display: inline-block;
-    text-align: justify;
-    font-size: 1.75rem;
-    line-height: 1.50;
+    text-align: center;
+    font-size: 1.6rem;
+    line-height:2.5;
 }
 .btn-register-header {
     background: linear-gradient(45deg, #00c6ff, #0072ff);
