--- a/style.css
+++ b/style.css
@@ -139,6 +139,12 @@ body {
     font-size: 1.6rem;
     line-height:2.5;
 }
+@media (max-width: 768px) {
+    .lead {
+        font-size: 1.5rem;
+        line-height:1.5;
+    }
+}
 .btn-register-header {
     background: linear-gradient(45deg, #00c6ff, #0072ff);
     color: white;
